# set_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
src/: CMakeLists.txt  Card.h  ClassifyImage.cpp  LoadImage.cpp  Main.cpp  Main2.cpp  SaveContour.cpp  ThresholdTester.cpp  board.cpp  board.h  card.cpp  card.h  load_image.cpp  main.cpp  save_contour.cpp  threshold_calibrator.cpp
src/utils/: image_contours.cpp  threshold_calibrator.cpp
tests/: CMakeLists.txt  TestCard.cpp  TestImageOperations.cpp  test_board.h  test_card_classifiers.cpp  test_card_classifiers.h  test_contours.h  test_gtest.cpp  test_image_loading.h  test_main.cpp
